package co.edu.uniquindio.empresa.model;

public enum Categoria {

	ADMINISTRADOR, GERENTE, SUBGERENTE
}
